[metadata]
license      = Apache License 2.0
license_file = LICENSE
platforms    = any
description  = HASS custom-compontents integration for Python scripting
long_description = file: README.md
keywords     = Home Automation, HASS, HACS, automation
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: End Users/Desktop
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.13
    Topic :: Home Automation

[tool:pytest]
testpaths = tests
norecursedirs = .git
log_level=INFO
addopts =
    --strict-markers
    --asyncio-mode=auto

[mypy]
python_version = 3.13
ignore_errors = true
follow_imports = silent
ignore_missing_imports = true
warn_incomplete_stub = true
warn_redundant_casts = true
warn_unused_configs = true

[codespell]
ignore-words-list = thirdparty
